# split-hover-esc

./: Cargo.toml  Embed.toml  HoverboardOutputMM32SPIN05.hex  README.md  build.rs
.cargo/: config.toml
doc/: ardupilot_telemetry.md  compile_hoverboard_hack.md  flash-razor.md  flash-rp2040.md  pin_finder.md  port_hoverboard_hack.md  port_plan.md  power_button.md  qgroundcontrol_telemetry.md  r8ef.md  remote_uart_bus_protocol.md  rs485.md
rtt-logs/: speed0_RP2040_1768071623680_channel0.txt  speed0_RP2040_1768071774831_channel0.txt
src/: lib.rs
util/: HoverboardOutputMM32SPIN05_main_5_1_24.hex  motor_control.py
