[package]
edition = "2024"
name = "split-hover-esc"
version = "0.1.0"

[lib]
crate-type = ["rlib"]

[dependencies]
# Embassy async runtime & core
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread"] }
embassy-futures = "0.1.2"
embassy-rp = { version = "0.9.0", features = ["time-driver", "critical-section-impl", "rp2040", "unstable-pac", "defmt"] }
embassy-time = "0.5.0"
embassy-sync = "0.7.0"

# WiFi support for Pico W (CYW43439)
cyw43 = { version = "0.6.0", features = ["defmt"] }
cyw43-pio = { version = "0.9.0", features = ["defmt"] }

# ARM Cortex-M support
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"

# Debugging & logging
defmt = "1.0.1"
rtt-target = { version = "0.6", features = ["defmt"] }
panic-probe = { version = "1.0", features = ["print-defmt"] }

# Utilities
static_cell = "2.1"
portable-atomic = { version = "1.11.1", features = ["critical-section"] }
heapless = "0.8"
critical-section = "1.2.0"

# I/O
embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }

[profile.release]
debug = 2
lto = true
opt-level = "s"

[profile.dev]
debug = 2
lto = true
opt-level = "s"
